--- a/index.html
+++ b/index.html
@@ -1,14 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="css/master.css">
+  <link href="https://fonts.googleapis.com/css?family=Roboto+Mono" rel="stylesheet">
   <title>Document</title>
 </head>
+
 <body>
-  <canvas id="myCanvas" width="300" height="300"></canvas>
+  <nav>
+    <p>GAW</p>
+    <ul>
+      <li><a href="#">Home</a></li>
+      <li id="drop_down"><a href="#">My projects</a>
+        <ul>
+          <li><a href="#">Dynamic styles</a></li>
+          <li><a href="#">Images</a></li>
+        </ul>
+      </li>
+      <li><a href="#">About me</a></li>
+      <li><a href="#">Resume</a></li>
+    </ul>
+  </nav>
+  <div id="container">
+    <canvas></canvas>
+  </div>
   <script src="js/script.js" charset="utf-8"></script>
 </body>
+
 </html>
